<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="uQL-yk-Xtw">
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Login-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="LoginViewController" customModule="Login" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="X4h-5T-BtL">
                                <accessibility key="accessibilityConfiguration" identifier="username"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="RJA-mD-LBo">
                                <accessibility key="accessibilityConfiguration" identifier="password"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="G6H-W9-zY9">
                                <accessibility key="accessibilityConfiguration" identifier="login"/>
                                <state key="normal" title="Login"/>
                                <connections>
                                    <action selector="login" destination="BYZ-38-t0r" eventType="touchUpInside" id="2bh-Yr-hvL"/>
                                </connections>
                            </button>
                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="IPc-fG-BcL"/>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstItem="X4h-5T-BtL" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="HQM-iY-qCr"/>
                            <constraint firstItem="RJA-mD-LBo" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="Kqa-Oa-C7N"/>
                            <constraint firstItem="G6H-W9-zY9" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="LTx-nh-73A"/>
                            <constraint firstItem="RJA-mD-LBo" firstAttribute="top" secondItem="X4h-5T-BtL" secondAttribute="bottom" constant="8" symbolic="YES" id="MjK-Ja-5gT"/>
                            <constraint firstItem="RJA-mD-LBo" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="PZN-jE-942"/>
                            <constraint firstItem="G6H-W9-zY9" firstAttribute="top" secondItem="RJA-mD-LBo" secondAttribute="bottom" constant="8" symbolic="YES" id="bAY-Bm-V8g"/>
                            <constraint firstItem="IPc-fG-BcL" firstAttribute="centerY" secondItem="G6H-W9-zY9" secondAttribute="centerY" id="cOK-mh-AIq"/>
                            <constraint firstItem="X4h-5T-BtL" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="udg-zc-zWt"/>
                            <constraint firstItem="IPc-fG-BcL" firstAttribute="centerX" secondItem="G6H-W9-zY9" secondAttribute="centerX" id="wAQ-Mk-QlQ"/>
                            <constraint firstItem="X4h-5T-BtL" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" symbolic="YES" id="z0M-80-2hP"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Login" id="pxm-4P-dRt"/>
                    <connections>
                        <outlet property="activityIndicator" destination="IPc-fG-BcL" id="192-HC-pu0"/>
                        <outlet property="loginButton" destination="G6H-W9-zY9" id="smn-5B-s80"/>
                        <outlet property="password" destination="RJA-mD-LBo" id="Y4E-W3-5vI"/>
                        <outlet property="username" destination="X4h-5T-BtL" id="GFL-k2-vkT"/>
                        <segue destination="sno-Ls-x8i" kind="show" identifier="Main" id="zcq-fC-Eoc"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="952" y="241"/>
        </scene>
        <!--Navigation Controller-->
        <scene sceneID="GyZ-3H-nmv">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="uQL-yk-Xtw" sceneMemberID="viewController">
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="12o-Ck-cGu">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
                    <connections>
                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="DG4-2t-IOL"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="SXC-LL-l8N" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="264" y="241"/>
        </scene>
        <!--View Controller-->
        <scene sceneID="yJa-jt-8PG">
            <objects>
                <viewController id="sno-Ls-x8i" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="ZRy-Vh-9M0"/>
                        <viewControllerLayoutGuide type="bottom" id="vtI-MX-c5d"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="0MS-9f-iCK">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="42" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DHK-Bp-3jS">
                                <accessibility key="accessibilityConfiguration" identifier="label"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstItem="DHK-Bp-3jS" firstAttribute="centerY" secondItem="0MS-9f-iCK" secondAttribute="centerY" id="EGA-Vk-bo1"/>
                            <constraint firstItem="DHK-Bp-3jS" firstAttribute="centerX" secondItem="0MS-9f-iCK" secondAttribute="centerX" id="be7-HF-CVr"/>
                        </constraints>
                    </view>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="GTU-u9-2bx" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1655" y="241"/>
        </scene>
    </scenes>
</document>
